fix raven_batch_detec directory issue

--- a/vignettes/Rraven.Rmd
+++ b/vignettes/Rraven.Rmd
@@ -44,9 +44,9 @@ options(width = 150, max.print = 100)
 ```
  &nbsp; 
 
-The `Rraven` package is designed to facilitate the exchange of data between R and  [Raven sound analysis software](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) ([Cornell Lab of Ornithology](http://www.birds.cornell.edu)). [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) provides very  powerful tools for the analysis of (animal) sounds. R can simplify the automatization of complex routines of analyses. Furthermore, R packages as [warbleR](https://cran.r-project.org/package=warbleR), [seewave](https://cran.r-project.org/package=seewave) and [monitoR](https://cran.r-project.org/package=monitoR) (among others) provide additional methods of analysis, working as a perfect complement for those found in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html). Hence, bridging these applications can largely expand the bioacoustician's toolkit.
+The `Rraven` package is designed to facilitate the exchange of data between R and  [Raven sound analysis software](http://ravensoundsoftware.com/software/raven-pro/) ([Cornell Lab of Ornithology](http://www.birds.cornell.edu)). [Raven](http://ravensoundsoftware.com/software/raven-pro/) provides very  powerful tools for the analysis of (animal) sounds. R can simplify the automatization of complex routines of analyses. Furthermore, R packages as [warbleR](https://cran.r-project.org/package=warbleR), [seewave](https://cran.r-project.org/package=seewave) and [monitoR](https://cran.r-project.org/package=monitoR) (among others) provide additional methods of analysis, working as a perfect complement for those found in [Raven](http://ravensoundsoftware.com/software/raven-pro/). Hence, bridging these applications can largely expand the bioacoustician's toolkit.
 
-Currently, most analyses in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) cannot be run in the background from a command terminal. Thus, most `Rraven` functions are design to simplify the exchange of data between the two programs, and in some cases, export files to  [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) for further analysis. This vignette provides detailed examples for each function in `Rraven`, including both the R code as well as the additional steps in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) required to fully accomplished the analyses. Raven Pro must be installed to be able to run some of the code. Note that the animations explaining these additional [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) steps are shown in more detail in the [github](https://github.com/maRce10/Rraven) version of this vignette, which can be downloaded as follows (saves the file "Rraven.github.html" in your current working directory):
+Currently, most analyses in [Raven](http://ravensoundsoftware.com/software/raven-pro/) cannot be run in the background from a command terminal. Thus, most `Rraven` functions are design to simplify the exchange of data between the two programs, and in some cases, export files to  [Raven](http://ravensoundsoftware.com/software/raven-pro/) for further analysis. This vignette provides detailed examples for each function in `Rraven`, including both the R code as well as the additional steps in [Raven](http://ravensoundsoftware.com/software/raven-pro/) required to fully accomplished the analyses. Raven Pro must be installed to be able to run some of the code. Note that the animations explaining these additional [Raven](http://ravensoundsoftware.com/software/raven-pro/) steps are shown in more detail in the [github](https://github.com/maRce10/Rraven) version of this vignette, which can be downloaded as follows (saves the file "Rraven.github.html" in your current working directory):
 
 
 ```{r eval = FALSE}
@@ -130,7 +130,7 @@ writeLines(selection_files[[x]], con = file.path(tempdir(), names(selection_file
 
 ### *imp_raven*
 
-This function imports [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) selection tables. Multiple files can be imported at once. [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) selection tables including data from multiple recordings can also be imported. It returns a single data frame with the information contained in the selection files. We already have 2 [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) selection tables in the working directory:
+This function imports [Raven](http://ravensoundsoftware.com/software/raven-pro/) selection tables. Multiple files can be imported at once. [Raven](http://ravensoundsoftware.com/software/raven-pro/) selection tables including data from multiple recordings can also be imported. It returns a single data frame with the information contained in the selection files. We already have 2 [Raven](http://ravensoundsoftware.com/software/raven-pro/) selection tables in the working directory:
 
 ```{r, eval=T, echo=T}
 
@@ -175,7 +175,7 @@ rvn.dat <- imp_raven(all.data = TRUE, waveform = TRUE, path = tempdir())
 ```
  &nbsp; 
  
-[Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) selections can also be imported in a 'selection.table' format so it can be directly input into [warbleR](https://cran.r-project.org/package=warbleR) functions. To do this you need to set `warbler.format = FALSE`: 
+[Raven](http://ravensoundsoftware.com/software/raven-pro/) selections can also be imported in a 'selection.table' format so it can be directly input into [warbleR](https://cran.r-project.org/package=warbleR) functions. To do this you need to set `warbler.format = FALSE`: 
 
 ```{r, eval=FALSE}
  #providing the name of the column with the sound file names
@@ -252,7 +252,7 @@ This is just to mention a few analysis that can be implemented in [warbleR](http
 
 ### *extract_ts*
 
-The function extracts parameters encoded as time series in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) selection tables. The resulting data frame can be directly input into functions for time series analysis of acoustic signals as in the [warbleR](https://cran.r-project.org/package=warbleR) function `dfDTW`. The function needs an R data frame, so the data should have been previously imported using `imp_raven`. This example uses the `selection_file.ts` example data that comes with `Rraven`: 
+The function extracts parameters encoded as time series in [Raven](http://ravensoundsoftware.com/software/raven-pro/) selection tables. The resulting data frame can be directly input into functions for time series analysis of acoustic signals as in the [warbleR](https://cran.r-project.org/package=warbleR) function `dfDTW`. The function needs an R data frame, so the data should have been previously imported using `imp_raven`. This example uses the `selection_file.ts` example data that comes with `Rraven`: 
 
 
 ```{r, eval=FALSE}
@@ -445,9 +445,9 @@ kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "respo
 
 ### *imp_corr_mat*
 
-The function imports the output of a batch correlation routine in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html). Both the correlation and lag matrices contained in the output '.txt' file are read and both waveform and spectrogram (cross-correlation) correlations can be imported. 
+The function imports the output of a batch correlation routine in [Raven](http://ravensoundsoftware.com/software/raven-pro/). Both the correlation and lag matrices contained in the output '.txt' file are read and both waveform and spectrogram (cross-correlation) correlations can be imported. 
 
-This example shows how to input the sound files into [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) and how to bring the results back to R. First, the selections need to be cut as single sound files for the [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) correlator to be able to read it. We can do this using the `cut_sels` function from [warbleR](https://cran.r-project.org/package=warbleR):
+This example shows how to input the sound files into [Raven](http://ravensoundsoftware.com/software/raven-pro/) and how to bring the results back to R. First, the selections need to be cut as single sound files for the [Raven](http://ravensoundsoftware.com/software/raven-pro/) correlator to be able to read it. We can do this using the `cut_sels` function from [warbleR](https://cran.r-project.org/package=warbleR):
 
 ```{r, eval=F, echo=T}
 
@@ -466,7 +466,7 @@ list.files(path = file.path(tempdir(), "cuts"))
 ```
  &nbsp; 
  
-Every selection is in its own sound file (labeled as `paste("rownames", "sound.files", "selec")`). Now open [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) and run the batch correlator on the 'cuts' folder as follows:
+Every selection is in its own sound file (labeled as `paste("rownames", "sound.files", "selec")`). Now open [Raven](http://ravensoundsoftware.com/software/raven-pro/) and run the batch correlator on the 'cuts' folder as follows:
 
 ![gif1](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_raven_correlator.gif)
  &nbsp; 
@@ -578,7 +578,7 @@ exp_raven(st1, file.name = "Phaethornis 1", khz.to.hz = TRUE, path = tempdir())
 ```
  &nbsp; 
  
-If the path to the sound file is provided, the functions exports a 'sound selection table' which can be directly open by [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) (and which will also open the associated sound file):
+If the path to the sound file is provided, the functions exports a 'sound selection table' which can be directly open by [Raven](http://ravensoundsoftware.com/software/raven-pro/) (and which will also open the associated sound file):
 
 ```{r, eval=FALSE, echo=T}
 # Select data for a single sound file
@@ -605,7 +605,7 @@ sound.file.path = tempdir(), single.file = TRUE, path = tempdir())
 ```
  &nbsp; 
 
-These type of tables can be opened as a multiple file display in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html):
+These type of tables can be opened as a multiple file display in [Raven](http://ravensoundsoftware.com/software/raven-pro/):
 
 ![gif4](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_exp_raven3.gif)
  &nbsp; 
@@ -616,7 +616,7 @@ These type of tables can be opened as a multiple file display in [Raven](http://
 
 ### *run_raven*
 
-The function opens multiple sound files simultaneously in  [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html). When the analysis is finished (and the  [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) window is closed) the data can be automatically imported back into R using the 'import' argument. Note that [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html), unlike R, can also handle files in 'mp3', 'flac' and 'aif' format . 
+The function opens multiple sound files simultaneously in  [Raven](http://ravensoundsoftware.com/software/raven-pro/). When the analysis is finished (and the  [Raven](http://ravensoundsoftware.com/software/raven-pro/) window is closed) the data can be automatically imported back into R using the 'import' argument. Note that [Raven](http://ravensoundsoftware.com/software/raven-pro/), unlike R, can also handle files in 'mp3', 'flac' and 'aif' format . 
 
 
 ```{r, eval=FALSE, echo=T}
@@ -638,9 +638,9 @@ See `imp_raven` above for more details on additional settings when importing sel
 
 ### *raven_batch_detec*
 
-As the name suggests, *raven_batch_detec* runs [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) detector on multiple sound files (sequentially). Batch detection in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) can also take files in 'mp3', 'flac' and 'aif' format (although this could not be further analyzed in R!).
+As the name suggests, *raven_batch_detec* runs [Raven](http://ravensoundsoftware.com/software/raven-pro/) detector on multiple sound files (sequentially). Batch detection in [Raven](http://ravensoundsoftware.com/software/raven-pro/) can also take files in 'mp3', 'flac' and 'aif' format (although this could not be further analyzed in R!).
 
-This is example runs the detector on one of the example sound files that comes by default with [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html):
+This is example runs the detector on one of the example sound files that comes by default with [Raven](http://ravensoundsoftware.com/software/raven-pro/):
 
 ```{r, eval=FALSE, echo=T}
 
