--- a/vignettes/Rraven.Rmd
+++ b/vignettes/Rraven.Rmd
@@ -1,7 +1,7 @@
 ---
 title: <center><font size="7"><b>Rraven&#58; Connecting R and Raven Sound Analysis Software</b></font></center>
 pagetitle: Rraven, connecting R and Raven Sound Analysis Software
-author: <center><a href="http://marceloarayasalas.weebly.com/">Marcelo Araya-Salas, PhD</a> </center>
+author: <center><a href="https://marceloarayasalas.weebly.com/">Marcelo Araya-Salas, PhD</a> </center>
  &nbsp; 
 date:  <center>"`r Sys.Date()`"</center>
 output:
@@ -53,9 +53,9 @@ options(width = 150, max.print = 100)
 ```
  &nbsp; 
 
-The `Rraven` package is designed to facilitate the exchange of data between R and  [Raven sound analysis software](http://ravensoundsoftware.com) ([Cornell Lab of Ornithology](http://www.birds.cornell.edu)). [Raven](http://ravensoundsoftware.com) provides very  powerful tools for the analysis of (animal) sounds. R can simplify the automatization of complex routines of analyses. Furthermore, R packages as [warbleR](https://cran.r-project.org/package=warbleR), [seewave](https://cran.r-project.org/package=seewave) and [monitoR](https://cran.r-project.org/package=monitoR) (among others) provide additional methods of analysis, working as a perfect complement for those found in [Raven](http://ravensoundsoftware.com). Hence, bridging these applications can largely expand the bioacoustician's toolkit.
+The `Rraven` package is designed to facilitate the exchange of data between R and  [Raven sound analysis software](https://ravensoundsoftware.com) ([Cornell Lab of Ornithology](https://www.birds.cornell.edu/home)). [Raven](https://ravensoundsoftware.com) provides very  powerful tools for the analysis of (animal) sounds. R can simplify the automatization of complex routines of analyses. Furthermore, R packages as [warbleR](https://cran.r-project.org/package=warbleR), [seewave](https://cran.r-project.org/package=seewave) and [monitoR](https://cran.r-project.org/package=monitoR) (among others) provide additional methods of analysis, working as a perfect complement for those found in [Raven](https://ravensoundsoftware.com). Hence, bridging these applications can largely expand the bioacoustician's toolkit.
 
-Currently, most analyses in [Raven](http://ravensoundsoftware.com) cannot be run in the background from a command terminal. Thus, most `Rraven` functions are design to simplify the exchange of data between the two programs, and in some cases, export files to  [Raven](http://ravensoundsoftware.com) for further analysis. This vignette provides detailed examples for each function in `Rraven`, including both the R code as well as the additional steps in [Raven](http://ravensoundsoftware.com) required to fully accomplished the analyses. Raven Pro must be installed to be able to run some of the code. Note that the animations explaining these additional [Raven](http://ravensoundsoftware.com) steps are shown in more detail in the [github](https://github.com/maRce10/Rraven) version of this vignette, which can be downloaded as follows (saves the file "Rraven.github.html" in your current working directory):
+Currently, most analyses in [Raven](https://ravensoundsoftware.com) cannot be run in the background from a command terminal. Thus, most `Rraven` functions are design to simplify the exchange of data between the two programs, and in some cases, export files to  [Raven](https://ravensoundsoftware.com) for further analysis. This vignette provides detailed examples for each function in `Rraven`, including both the R code as well as the additional steps in [Raven](https://ravensoundsoftware.com) required to fully accomplished the analyses. Raven Pro must be installed to be able to run some of the code. Note that the animations explaining these additional [Raven](https://ravensoundsoftware.com) steps are shown in more detail in the [github](https://github.com/maRce10/Rraven) version of this vignette, which can be downloaded as follows (saves the file "Rraven.github.html" in your current working directory):
 
 
 ```{r eval = FALSE}
@@ -142,7 +142,7 @@ writeLines(selection_files[[x]], con = file.path(tempdir(), names(selection_file
 
 ### *imp_raven*
 
-This function imports [Raven](http://ravensoundsoftware.com) selection tables. Multiple files can be imported at once. [Raven](http://ravensoundsoftware.com) selection tables including data from multiple recordings can also be imported. It returns a single data frame with the information contained in the selection files. We already have 2 [Raven](http://ravensoundsoftware.com) selection tables in the working directory:
+This function imports [Raven](https://ravensoundsoftware.com) selection tables. Multiple files can be imported at once. [Raven](https://ravensoundsoftware.com) selection tables including data from multiple recordings can also be imported. It returns a single data frame with the information contained in the selection files. We already have 2 [Raven](https://ravensoundsoftware.com) selection tables in the working directory:
 
 ```{r, eval=T, echo=T}
 
@@ -188,7 +188,7 @@ rvn.dat <- imp_raven(all.data = TRUE, waveform = TRUE,
 ```
  &nbsp; 
  
-[Raven](http://ravensoundsoftware.com) selections can also be imported in a 'selection.table' format so it can be directly input into [warbleR](https://cran.r-project.org/package=warbleR) functions. To do this you need to set `warbler.format = TRUE`: 
+[Raven](https://ravensoundsoftware.com) selections can also be imported in a 'selection.table' format so it can be directly input into [warbleR](https://cran.r-project.org/package=warbleR) functions. To do this you need to set `warbler.format = TRUE`: 
 
 ```{r, eval=FALSE}
  #providing the name of the column with the sound file names
@@ -221,7 +221,7 @@ The data frame contains the following columns: sound.files, channel, selec, star
 # convert to class selection.table
 rvn.dat.st <- selection_table(rvn.dat, path = tempdir())
 
-sp <- specan(X = rvn.dat, bp = "frange", wl = 150, 
+sp <- spectro_analysis(X = rvn.dat, bp = "frange", wl = 150, 
              pb = FALSE, ovlp = 90, path = tempdir())
 
 head(sp)
@@ -233,7 +233,7 @@ head(sp)
 # convert to class selection.table
 rvn.dat.st <- selection_table(rvn.dat)
 
-sp <- specan(X = rvn.dat, bp = "frange", wl = 150, pb = FALSE, ovlp = 90, path = tempdir())
+sp <- spectro_analysis(X = rvn.dat, bp = "frange", wl = 150, pb = FALSE, ovlp = 90, path = tempdir())
 
 kbl <- kable(head(sp), align = "c", row.names = F, escape = FALSE)
 
@@ -275,7 +275,7 @@ This is just to mention a few analysis that can be implemented in [warbleR](http
 
 ### *extract_ts*
 
-The function extracts parameters encoded as time series in [Raven](http://ravensoundsoftware.com) selection tables. The resulting data frame can be directly input into functions for time series analysis of acoustic signals as in the [warbleR](https://cran.r-project.org/package=warbleR) function `dfDTW`. The function needs an R data frame, so the data should have been previously imported using `imp_raven`. This example uses the `selection_file.ts` example data that comes with `Rraven`: 
+The function extracts parameters encoded as time series in [Raven](https://ravensoundsoftware.com) selection tables. The resulting data frame can be directly input into functions for time series analysis of acoustic signals as in the [warbleR](https://cran.r-project.org/package=warbleR) function `freq_DTW`. The function needs an R data frame, so the data should have been previously imported using `imp_raven`. This example uses the `selection_file.ts` example data that comes with `Rraven`: 
 
 
 ```{r, eval=FALSE}
@@ -376,18 +376,18 @@ kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "respo
 ```
  &nbsp; 
 
-The time series data frame can be directly input into the `dfDTW` [warbleR](https://cran.r-project.org/package=warbleR) function to calculate [Dynamic Time Warping](https://en.wikipedia.org/wiki/Dynamic_time_warping) distances:
+The time series data frame can be directly input into the `freq_DTW` [warbleR](https://cran.r-project.org/package=warbleR) function to calculate [Dynamic Time Warping](https://en.wikipedia.org/wiki/Dynamic_time_warping) distances:
 
 ```{r, eval=F, echo=T}
 
-dfDTW(ts.df = fcts, path = tempdir())
+freq_DTW(ts.df = fcts, path = tempdir())
 
 ```
 &nbsp;
 
 ```{r, eval=T, echo=F}
 
-kbl <- kable(dfDTW(ts.df = fcts, path = tempdir()), align = "c", row.names = T, escape = FALSE)
+kbl <- kable(freq_DTW(ts.df = fcts, path = tempdir()), align = "c", row.names = T, escape = FALSE)
 
 kbl <- kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "responsive"), full_width = T, font_size = 12)
 
@@ -469,9 +469,9 @@ kable_styling(kbl, bootstrap_options = c("striped", "hover", "condensed", "respo
 
 ### *imp_corr_mat*
 
-The function imports the output of a batch correlation routine in [Raven](http://ravensoundsoftware.com). Both the correlation and lag matrices contained in the output '.txt' file are read and both waveform and spectrogram (cross-correlation) correlations can be imported. 
+The function imports the output of a batch correlation routine in [Raven](https://ravensoundsoftware.com). Both the correlation and lag matrices contained in the output '.txt' file are read and both waveform and spectrogram (cross-correlation) correlations can be imported. 
 
-This example shows how to input the sound files into [Raven](http://ravensoundsoftware.com) and how to bring the results back to R. First, the selections need to be cut as single sound files for the [Raven](http://ravensoundsoftware.com) correlator to be able to read it. We can do this using the `cut_sels` function from [warbleR](https://cran.r-project.org/package=warbleR):
+This example shows how to input the sound files into [Raven](https://ravensoundsoftware.com) and how to bring the results back to R. First, the selections need to be cut as single sound files for the [Raven](https://ravensoundsoftware.com) correlator to be able to read it. We can do this using the `cut_sels` function from [warbleR](https://cran.r-project.org/package=warbleR):
 
 ```{r, eval=F, echo=T}
 
@@ -492,7 +492,7 @@ list.files(path = file.path(tempdir(), "cuts"))
 ```
  &nbsp; 
  
-Every selection is in its own sound file (labeled as `paste("rownames", "sound.files", "selec")`). Now open [Raven](http://ravensoundsoftware.com) and run the batch correlator on the 'cuts' folder as follows:
+Every selection is in its own sound file (labeled as `paste("rownames", "sound.files", "selec")`). Now open [Raven](https://ravensoundsoftware.com) and run the batch correlator on the 'cuts' folder as follows:
 
 ![gif1](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_raven_correlator.gif)
  &nbsp; 
@@ -605,7 +605,7 @@ exp_raven(st1, file.name = "Phaethornis 1", khz.to.hz = TRUE, path = tempdir())
 ```
  &nbsp; 
  
-If the path to the sound file is provided, the functions exports a 'sound selection table' which can be directly open by [Raven](http://ravensoundsoftware.com) (and which will also open the associated sound file):
+If the path to the sound file is provided, the functions exports a 'sound selection table' which can be directly open by [Raven](https://ravensoundsoftware.com) (and which will also open the associated sound file):
 
 ```{r, eval=FALSE, echo=T}
 # Select data for a single sound file
@@ -633,7 +633,7 @@ exp_raven(X = selec.table, file.name = "Phaethornis multiple sound files",
 ```
  &nbsp; 
 
-These type of tables can be opened as a multiple file display in [Raven](http://ravensoundsoftware.com).
+These type of tables can be opened as a multiple file display in [Raven](https://ravensoundsoftware.com).
 
 <!-- ![gif4](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_exp_raven3.gif) -->
 <!--  &nbsp;  -->
@@ -644,7 +644,7 @@ These type of tables can be opened as a multiple file display in [Raven](http://
 
 ### *run_raven*
 
-The function opens multiple sound files simultaneously in  [Raven](http://ravensoundsoftware.com). When the analysis is finished (and the  [Raven](http://ravensoundsoftware.com) window is closed) the data can be automatically imported back into R using the 'import' argument. Note that [Raven](http://ravensoundsoftware.com), unlike R, can also handle files in 'mp3', 'flac' and 'aif' format . 
+The function opens multiple sound files simultaneously in  [Raven](https://ravensoundsoftware.com). When the analysis is finished (and the  [Raven](https://ravensoundsoftware.com) window is closed) the data can be automatically imported back into R using the 'import' argument. Note that [Raven](https://ravensoundsoftware.com), unlike R, can also handle files in 'mp3', 'flac' and 'aif' format . 
 
 
 ```{r, eval=FALSE, echo=T}
@@ -666,9 +666,9 @@ See `imp_raven` above for more details on additional settings when importing sel
 
 ### *raven_batch_detec*
 
-As the name suggests, *raven_batch_detec* runs [Raven](http://ravensoundsoftware.com) detector on multiple sound files (sequentially). Batch detection in [Raven](http://ravensoundsoftware.com) can also take files in 'mp3', 'flac' and 'aif' format (although this could not be further analyzed in R!).
+As the name suggests, *raven_batch_detec* runs [Raven](https://ravensoundsoftware.com) detector on multiple sound files (sequentially). Batch detection in [Raven](https://ravensoundsoftware.com) can also take files in 'mp3', 'flac' and 'aif' format (although this could not be further analyzed in R!).
 
-This is example runs the detector on one of the example sound files that comes by default with [Raven](http://ravensoundsoftware.com):
+This is example runs the detector on one of the example sound files that comes by default with [Raven](https://ravensoundsoftware.com):
 
 ```{r, eval=FALSE, echo=T}
 
